# Projet-Annuel-3e-ann-e

./: .gitignore  Linéraire.ipynb  README.md  cdt05.ipynb  cdt05_updated_current_project.ipynb
docs/: 01_vue_ensemble.md  02_donnees_entrainement_modeles.md  03_prediction_et_applications.md  04_preparer_la_soutenance.md  05_glossaire.md  COMMANDES_DEMO_SANDOR_CMD.md  FEUILLE_DE_ROUTE_DEMOS_SOUTENANCE.md  README.md
ml_library/: CMakeLists.txt
ml_library/include/: mlp.h  mlp.hpp  perceptron.h  perceptron.hpp  rbf.h  rbf.hpp  svm.h  svm.hpp
ml_library/src/: main.c  main.cpp  mlp.c  mlp.cpp  perceptron.c  perceptron.cpp  rbf.c  rbf.cpp  svm.c  svm.cpp
notebook_modeles_entraines_batiments_clean/: COMMANDES.md  README.md
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/: CMakeLists.txt  FONCTIONNALITES.md  GUIDE_DU_CODE.md  README.md  TESTS_VALIDES.md  WEB_GUIDE.md  build_windows.bat
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/include/: dataset.h  ml_api.h
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/models/: buildings_3classes_32x32_mlp_v2.model  models_manifest.json  perceptron_linear.txt
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/models/reports/: rbf_v1.json  rbf_v2.json
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/models/reports/tuning/: rbf_sigma_12.json  rbf_sigma_4.json  rbf_stratified_16_sigma_4.json  rbf_stratified_16_sigma_8.json  rbf_stratified_64_sigma_3.json
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/scripts/: train_all_models.py
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/src/: dataset.c  demo.c  ml_api.cpp  predict_cli.cpp  tests.c  train_cli.cpp  tune_cli.cpp
notebook_modeles_entraines_batiments_clean/app_final/projet_rendu_2_ml/web/: app.py  test_app.py
notebook_modeles_entraines_batiments_clean/docs/: questions_techniques_algorithmes.md
notebook_modeles_entraines_batiments_clean/notebooks/: notebook_modeles_entraines_batiments_complet_cas_modeles.ipynb
notebook_modeles_entraines_batiments_clean/results/: dataset_classes.csv  details_techniques_algorithmes.csv  fichiers_modeles.csv  meilleur_modele.csv  metrics_cases.csv  resume_modeles.csv  tuning_candidates.csv
outputs/: Projet_Annuel_3_Big_Data_2026_NOTES_ORALES_ET_PERCHES.pptx
projet_rendu_2_ml/: CMakeLists.txt  FONCTIONNALITES.md  GUIDE_DU_CODE.md  README.md  TESTS_VALIDES.md  WEB_GUIDE.md  build_linux.sh  build_windows.bat
projet_rendu_2_ml/data/: linear.csv
projet_rendu_2_ml/include/: ml_api.h  net_compat.h  tests.h
projet_rendu_2_ml/models/: buildings_3classes_32x32_perceptron_v1.model  buildings_3classes_32x32_rbf_v1.model  buildings_3classes_32x32_svm_v1.model  models_manifest.json
projet_rendu_2_ml/models/reports/: mlp_v1.json  mlp_v2.json  perceptron_v1.json  svm_v1.json
projet_rendu_2_ml/models/reports/tuning/: mlp_candidates.json  perceptron_candidates.json  rbf_centers_32_sigma_4.json  rbf_centers_32_sigma_8.json  rbf_centers_64_sigma_4.json  rbf_sigma_16.json  rbf_sigma_2.json  rbf_sigma_24.json  rbf_sigma_32.json  rbf_sigma_8.json  rbf_stratified_16_sigma_2.json  rbf_stratified_32_sigma_4.json  rbf_stratified_64_sigma_4.json  rbf_stratified_64_sigma_5.json  rbf_stratified_96_sigma_5.json  svm_candidates.json  tuning_summary.json
projet_rendu_2_ml/report/: rapport_interactif.md
projet_rendu_2_ml/scripts/: images_to_csv.py
projet_rendu_2_ml/src/: client.c  dataset.c  demo.c  ml_api.cpp  mlp_xor_audit.cpp  server.c  tests.c  train_cli.cpp  tune_cli.cpp
projet_rendu_2_ml/web/: app.py  image_processing.py  requirements.txt
projet_rendu_2_ml/web/static/: style.css
projet_rendu_2_ml/web/templates/: index.html
