cmake_minimum_required(VERSION 3.16)
project(ProjetRendu2 LANGUAGES C CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
add_library(ml_core STATIC src/ml_api.cpp)
target_include_directories(ml_core PUBLIC include)
add_library(c_support STATIC src/dataset.c)
target_include_directories(c_support PUBLIC include)
add_executable(demo src/demo.c src/tests.c)
target_link_libraries(demo PRIVATE ml_core c_support)
add_executable(server src/server.c)
target_link_libraries(server PRIVATE ml_core)
add_executable(client src/client.c)
target_include_directories(client PRIVATE include)
if(WIN32)
 target_link_libraries(server PRIVATE ws2_32)
 target_link_libraries(client PRIVATE ws2_32)
endif()
